<resources>
    <string name="app_name">lembrete de tarefas</string>
    <string name="label_new_task">Criar tarefa</string>
    <string name="label_title">Titulo</string>
    <string name="label_hour">Hora</string>
    <string name="label_data">Data</string>
    <string name="label_new_cancel">Cancelar</string>
    <string name="label_tasks">Tarefas</string>
    <string name="label_description_new_task">Nova tarefa</string>
    <string name="label_edit">Editar</string>
    <string name="label_delete">Deletar</string>
    <string name="label_you_dont_have_task">Ops!!Você não possui nenhuma tarefa no dia de hoje!!</string>
</resources>