<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Titulo"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_navigate_before_24"
        app:title="@string/label_new_task" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="339dp"
        android:layout_height="45dp"
        android:layout_marginTop="36dp"
        android:hint="@string/label_title"
        app:layout_constraintEnd_toEndOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guide_start"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"></com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_hour"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="158dp"
        android:layout_height="44dp"
        android:hint="@string/label_hour"
        app:Layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintHorizontal_bias="0.978"
        app:layout_constraintStart_toEndOf="@id/til_date"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:startIconDrawable="@drawable/ic_baseline_timer_24"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="180dp">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_date"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="168dp"
        android:layout_height="44dp"
        android:hint="@string/label_data"
        app:startIconDrawable="@drawable/ic_baseline_calendar_today_24"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="180dp" />

    <Button
        style="@style/Widget.MaterialComponents.Button"
        android:id="@+id/btnNewTask"
        android:layout_width="307dp"
        android:layout_height="57dp"
        android:text="@string/label_new_task"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guide_start"
        tools:layout_editor_absoluteY="565dp" />

    <Button
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/btnCancel"
        android:layout_width="312dp"
        android:layout_height="49dp"
        android:text="@string/label_new_cancel"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guide_start"
        tools:layout_editor_absoluteY="643dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
